[gd_scene load_steps=2 format=3 uid="uid://wu415q2x5pmy"]

[ext_resource type="Script" uid="uid://wcanem5x2bxi" path="res://addons/composition/editor/select_component_popup.gd" id="1_cviwn"]

[node name="SelectComponentPopup" type="Popup"]
oversampling_override = 1.0
title = "Select component"
position = Vector2i(0, 36)
size = Vector2i(160, 127)
visible = true
borderless = false
script = ExtResource("1_cviwn")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="ComponentList" type="ItemList" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_width = true
auto_height = true

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_activated" from="MarginContainer/VBoxContainer/ScrollContainer/ComponentList" to="." method="activate_component"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
